<resources>
    <string name="app_name" translatable="false">King Bluetooth</string>
    <string name="device_name" translatable="false">DEVICE NAME</string>
    <string name="statusConnected">Active - Connected</string>
    <string name="statusActive">Active</string>
    <string name="on" translatable="false">On</string>
    <string name="off" translatable="false">Off</string>
    <string name="available_devices">Multimedia devices connected</string>
    <string name="search_device">Available devices</string>
    <string name="pairing">Pair new device</string>
    <string name="history_devices">Previously connected devices</string>
    <string name="info">Turn on Bluetooth to connect to other devices</string>
    <string name="history">Received file</string>
    <string name="about" translatable="false">About Us</string>
    <string name="Null" translatable="false">Null</string>
    <string name="no_previous_device">No previous device</string>
</resources>
