<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/selectableItemBackground"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPaddingBottom="15dp"
        app:contentPaddingTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="16" />

            <Switch
                android:id="@+id/swtBtOnOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="84"
                android:text="@string/off"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/divider6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvBluetooth">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:visibility="visible" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvConnected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPaddingBottom="15dp"
                app:contentPaddingTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20" />

                    <TextView
                        android:id="@+id/tvConnected"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="80"
                        android:text="@string/available_devices"
                        android:textColor="@color/primaryColor"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvConnected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:contentPaddingBottom="15dp"
                app:contentPaddingTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivDisconnect"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:contentDescription="@string/Null"
                        app:srcCompat="@drawable/ic_add" />

                    <TextView
                        android:id="@+id/tvDeviceName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="80"
                        android:text="@string/pairing" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPaired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:contentPaddingBottom="15dp"
                app:contentPaddingTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivPaired"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:contentDescription="@string/Null"
                        app:srcCompat="@drawable/ic_devices_other" />

                    <TextView
                        android:id="@+id/tvPaired"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="80"
                        android:text="@string/history_devices" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/divider5"
                android:layout_width="0dp"
                android:layout_height="1dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPaddingBottom="15dp"
                app:contentPaddingTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20" />

                    <TextView
                        android:id="@+id/idScan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="59"
                        android:baselineAligned="false"
                        android:text="@string/history_devices"
                        android:textColor="@color/primaryColor"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:indeterminate="false"
                        android:visibility="invisible" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rwDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPaddingBottom="15dp"
        app:contentPaddingTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:contentDescription="@string/Null"
                app:srcCompat="@drawable/ic_info_outline" />

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:text="@string/info"
                android:textColor="@color/primaryDarkColor" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

















































